crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_225_ColorDreams72in1_110_in_1_Asia_En_Unl_Pirate.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-225-ColorDreams72in1/110 in 1 (Asia) (En) (Unl) (Pirate).nes
rom_sha256=991e79bbde0c6f4fe7fdf67e83f36ea8bcb4094e6e27452740ee37cde974ddf3
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=155225722903ff03
checkpoint f900 fb_fnv1a64=e7ea13580f95620e
checkpoint f1100 fb_fnv1a64=083cad26fa52fa5c
