crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_225_ColorDreams72in1_110_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-225-ColorDreams72in1/110-in-1 [p1][!].nes
rom_sha256=1042631c0b9aaa72dae10b8b66ab8c424c1bd7e609c9ad60f72f700df5552df2
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=155225722903ff03
checkpoint f900 fb_fnv1a64=e7ea13580f95620e
checkpoint f1100 fb_fnv1a64=083cad26fa52fa5c
