crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_227_BMC_1200in1_295_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-227-BMC-1200in1/295-in-1 [p1][!].nes
rom_sha256=fd5508223a56e536fad64e14540ba95cff81d53272187a6b6864023e051ddea3
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=d36ab7f627d23fd3
checkpoint f900 fb_fnv1a64=3b1dcdc3072d65d3
checkpoint f1100 fb_fnv1a64=d0b3a7e732221ee9
