crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_227_BMC_1200in1_Biohazard_China_Unl_En_1_0.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-227-BMC-1200in1/Biohazard (China) (Unl) (En) (1.0).nes
rom_sha256=8d6c562894f9a3e7cc65dc49e7adfff257b4d227a9aa6455df8b5ec80ffc8c6f
frames=1141
fb_bytes=245760
cycles=33949961
audio_samples=836509
audio_fnv1a64=91d3042e54f68a51
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
